--- a/Qado/MainWindow.xaml
+++ b/Qado/MainWindow.xaml
@@ -22,7 +22,7 @@
                 <StackPanel Orientation="Vertical">
                     <TextBlock Text="Node Status" FontWeight="Bold" FontSize="14"/>
                     <StackPanel Orientation="Horizontal" Margin="0,6,0,0">
-                        <TextBlock Text="Tip Height:" FontWeight="Bold"/>
+                        <TextBlock Text="Synced/Tip Height:" FontWeight="Bold"/>
                         <TextBlock x:Name="TipHeightText" Margin="8,0,18,0"/>
                         <TextBlock Text="Tip Hash:" FontWeight="Bold"/>
                         <TextBlock x:Name="TipHashText" Margin="8,0,0,0"
